[package]
name = "flume"
version = "0.10.8"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
description = "A blazingly fast multi-producer channel"
repository = "https://github.com/zesterer/flume"
keywords = ["mpsc", "fifo", "channel", "thread", "mpmc"]
categories = ["concurrency", "data-structures"]
license = "Apache-2.0/MIT"
readme = "README.md"
exclude = [
    "/.github",
    "/misc",
]

[features]
select = []
async = ["futures-sink", "futures-core", "pin-project"]
eventual-fairness = ["async", "nanorand"]
default = ["async", "select", "eventual-fairness"]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
spin = { version = "0.9.2", features = ["mutex"] }
futures-sink = { version = "0.3", default_features = false, optional = true }
futures-core = { version = "0.3", default_features = false, optional = true }
nanorand = { version = "0.6", features = ["getrandom"], optional = true }
pin-project = { version = "1", optional = true }
