[package]
name = "flume"
version = "0.10.8"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
description = "A blazingly fast multi-producer channel"
repository = "https://github.com/zesterer/flume"
keywords = ["mpsc", "fifo", "channel", "thread", "mpmc"]
categories = ["concurrency", "data-structures"]
license = "Apache-2.0/MIT"
readme = "README.md"
exclude = [
    "/.github",
    "/misc",
]

[features]
select = []
async = ["futures-sink", "futures-core", "pin-project"]
eventual-fairness = ["async", "nanorand"]
default = ["async", "select", "eventual-fairness"]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "thread"] }
spin = { version = "0.9.2", features = ["mutex"] }
futures-sink = { version = "0.3", default_features = false, optional = true }
futures-core = { version = "0.3", default_features = false, optional = true }
nanorand = { version = "0.6", features = ["getrandom"], optional = true }
pin-project = { version = "1", optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_build_helper = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_cov = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_crypto_helper = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_rand_derive = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_serialize = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_serialize_derive = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_serialize_derive_internals = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tcrypto = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tcrypto_helper = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tdh = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tkey_exchange = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tprotected_fs = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tse = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tseal = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_tunittest = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
#sgx_ucrypto = {  git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_unwind = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }